<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#b3000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_border"
        android:layout_gravity="bottom"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="23dp"
                android:id="@+id/tv_desc_1"
                android:text="@string/touch_title"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_close"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toTopOf="@id/tv_desc_1"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/tv_desc_2"
                android:text="@string/touch_desc_1"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textColor="#000000"
                android:lineSpacingExtra="6dp"
                app:layout_constraintLeft_toLeftOf="@id/tv_desc_1"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_desc_3"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textColor="#040303"
                android:text="@string/touch_desc_2"
                app:layout_constraintLeft_toLeftOf="@id/tv_desc_2"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_desc_4"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textColor="#040303"
                android:text="@string/touch_desc_3"
                app:layout_constraintLeft_toRightOf="@id/tv_desc_3"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_2"
                />
            
            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="확인"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"
                android:background="@drawable/btn_border"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</LinearLayout>