<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#b3000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_border"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="23dp"
                android:id="@+id/tv_title"
                android:text="@string/coinless_title"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_close"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:id="@+id/tv_desc_2"
                android:text="@string/coinless_exp_01"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="#000000"
                android:lineSpacingExtra="8dp"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_desc_3"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="38dp"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textColor="#333333"
                android:text="@string/coinless_exp_02"
                app:layout_constraintStart_toStartOf="@id/tv_desc_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_2"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/v_line"
                android:background="#eeeeee"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:id="@+id/tv_title_02"
                android:text="@string/coinless_exp_03"
                android:textStyle="normal"
                android:textSize="18dp"
                android:textColor="#000000"
                android:lineSpacingExtra="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_line"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="57dp"
                android:id="@+id/tv_desc_5"
                android:text="@string/coinless_exp_04"
                android:textSize="16dp"
                android:textColor="#333333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_02"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="55dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_desc_6"
                android:text=" - "
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="#666666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_5"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_desc_7"
                android:text="@string/coinless_exp_05"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="#666666"
                app:layout_constraintStart_toEndOf="@id/tv_desc_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:id="@+id/tv_desc_8"
                android:text=" - "
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="#666666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_7"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="55dp"
                android:layout_marginStart="4dp"
                android:id="@+id/tv_desc_9"
                android:text="@string/coinless_exp_06"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="#666666"
                app:layout_constraintStart_toEndOf="@id/tv_desc_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_desc_8"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/btn_identity"
                android:text="확인"
                android:textStyle="normal"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"
                android:background="@drawable/btn_border"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</LinearLayout>